--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         </activity>
         <activity android:name=".activity.WebviewActivity" />
         <activity android:name=".activity.SetupActivity"/>
+        <activity android:name=".activity.UserActivity"/>
     </application>
 
 </manifest>
