--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,9 @@ dependencies {
     // skin-support-constraint-layout ConstraintLayout support [selectable]
 
 
+    
+
+
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -51,11 +54,10 @@ dependencies {
     compile 'com.jaeger.ninegridimageview:library:1.0.0'
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.github.dfqin:grantor:2.4'
+    compile 'com.commit451:PhotoView:1.2.4'
     compile 'com.android.support:support-v4:25.3.1'
-
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.1.7'
-    compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
