--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,8 +26,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.WebviewActivity" />
-        <activity android:name=".activity.SetupActivity"/>
-        <activity android:name=".activity.UserActivity"/>
+        <activity android:name=".activity.SetupActivity" />
+        <activity android:name=".activity.UserActivity" />
+        <activity android:name=".activity.ImageDetailActivity"/>
     </application>
 
 </manifest>
