--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
         <activity android:name=".activity.WebviewActivity" />
         <activity android:name=".activity.SetupActivity" />
         <activity android:name=".activity.UserActivity" />
-        <activity android:name=".activity.ImageDetailActivity"/>
+        <activity android:name=".activity.ImageDetailActivity" />
+        <activity android:name=".activity.StatusDetailActivity"></activity>
     </application>
 
 </manifest>
