1、实现微博详情页中的转发列表 2、使用开源库，集成扫一扫功能，后序将自定义扫一扫界面

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,5 +58,6 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.journeyapps:zxing-android-embedded:3.5.0'
     compile 'com.orhanobut:logger:1.15'
 }
