1、增加账号管理页面，实现账号管理模块 2、解决了安卓6.0动态权限的申请问题，将权限的判断及请求统一放置到BaseActivity中 3、优化了登录登出过程中的token保存，activity销毁等相关处理，但任存在一些问题，需后续解决

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,9 @@
         <activity android:name=".activity.SetupActivity" />
         <activity android:name=".activity.UserActivity" />
         <activity android:name=".activity.ImageDetailActivity" />
-        <activity android:name=".activity.StatusDetailActivity"></activity>
+        <activity android:name=".activity.StatusDetailActivity"/>
+        <activity android:name=".activity.AccountActivity"/>
+
     </application>
 
 </manifest>
