--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,10 @@
         <activity android:name=".activity.StatusDetailActivity"/>
         <activity android:name=".activity.AccountActivity"/>
         <activity android:name=".activity.TopicActivity"/>
+        <activity android:name=".activity.PostActivity"
+            android:windowSoftInputMode="stateAlwaysVisible">
+
+        </activity>
 
     </application>
 
