--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,9 +33,10 @@
         <activity android:name=".activity.AccountActivity"/>
         <activity android:name=".activity.TopicActivity"/>
         <activity android:name=".activity.PostActivity"
-            android:windowSoftInputMode="stateAlwaysVisible">
+            android:windowSoftInputMode="stateVisible|adjustResize">
 
         </activity>
+        <activity android:name=".activity.AlbumActivity"/>
 
     </application>
 
