1、完善本地相册选择界面的布局 2、编写本地相册加载工具类、适配器、item布局，实现本地相册的扫描及加载

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
             android:windowSoftInputMode="stateVisible|adjustResize">
 
         </activity>
-        <activity android:name=".activity.AlbumActivity"/>
+        <activity android:name=".activity.LocalAlbumActivity"/>
 
     </application>
 
