1、发送微博界面：集成高德地图定位sdk，实现发送微博时附加地理位置信息功能

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,17 +23,19 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     //skin
+
     // skin-support basic widget
+
     // skin-support-design material design support [selectable]
+
     // skin-support-cardview CardView support [selectable]
+
     // skin-support-constraint-layout ConstraintLayout support [selectable]
-
-
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -60,4 +62,5 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.journeyapps:zxing-android-embedded:3.5.0'
     compile 'com.orhanobut:logger:1.15'
+    compile files('libs/AMap_Location_V3.6.1_20171012.jar')
 }
