1、封装一个管理favorite数据请求的接口 2、微博item界面：增加功能——右上角的小箭头的点击事件，点击后弹出dialog，提供微博收藏与取消收藏、用户关注与取消关注、微博删除（针对登录用户的微博）功能，后续会进行其余功能的补充 3、我的收藏界面——新增我的收藏界面，列表呈现登录用户所收藏的所有微博 4、"我"界面——增加"我的收藏"、"我的赞"、"我的分组"可点击item，并实现"我的收藏"item点击跳转到"我的"收藏界面，后续会继续补充item模块，并完善"我的赞"以及"我的分组"点击跳转界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,7 @@
 
         </activity>
         <activity android:name=".activity.LocalAlbumActivity"/>
+        <activity android:name=".activity.FavoriteActivity"/>
 
     </application>
 
