--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,7 @@
         </activity>
         <activity android:name=".activity.LocalAlbumActivity"/>
         <activity android:name=".activity.FavoriteActivity"/>
+        <activity android:name=".activity.WebviewActivity"/>
 
     </application>
 
