1、Friendship通讯接口：新增Friendship接口 2、关注列表界面：新增关注列表界面 3、粉丝列表界面：新增粉丝列表界面 4、"我"界面、用户详情界面：增加关注跳转以及粉丝跳转

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,6 +65,7 @@
         <activity android:name=".activity.LocalAlbumActivity"/>
         <activity android:name=".activity.FavoriteActivity"/>
         <activity android:name=".activity.WebviewActivity"/>
+        <activity android:name=".activity.FriendshipActivity"/>
 
     </application>
 
