1、消息界面：完善数据加载，使同一用户的私信统一归类 2、私信聊天界面：新增私信聊天界面，增加接口，加载当前用户与他人的私信列表数据，后序将完善该界面功能，如增加发送私信功能、增加右上角"更多"功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,6 +66,7 @@
         <activity android:name=".activity.FavoriteActivity"/>
         <activity android:name=".activity.WebviewActivity"/>
         <activity android:name=".activity.FriendshipActivity"/>
+        <activity android:name=".activity.DirectMsgActivity"/>
 
     </application>
 
