1、评论界面：修改CommentAdapter以及CommentListFragment相关内容，以适配评论界面的数据加载（收到的评论和发出的评论），完成评论界面的开发，后序将加上"回复"按钮的点击功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,6 +67,7 @@
         <activity android:name=".activity.WebviewActivity"/>
         <activity android:name=".activity.FriendshipActivity"/>
         <activity android:name=".activity.DirectMsgActivity"/>
+        <activity android:name=".activity.CommentActivity"/>
 
     </application>
 
