--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,6 +68,7 @@
         <activity android:name=".activity.FriendshipActivity"/>
         <activity android:name=".activity.DirectMsgActivity"/>
         <activity android:name=".activity.CommentActivity"/>
+        <activity android:name=".activity.MentionActivity"/>
 
     </application>
 
