1、搜索界面：新增搜索界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,6 +69,7 @@
         <activity android:name=".activity.DirectMsgActivity"/>
         <activity android:name=".activity.CommentActivity"/>
         <activity android:name=".activity.MentionActivity"/>
+        <activity android:name=".activity.SearchActivity"/>
 
     </application>
 
