--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,7 +66,10 @@
         <activity android:name=".activity.FavoriteActivity"/>
         <activity android:name=".activity.WebviewActivity"/>
         <activity android:name=".activity.FriendshipActivity"/>
-        <activity android:name=".activity.DirectMsgActivity"/>
+        <activity android:name=".activity.DirectMsgActivity"
+            android:windowSoftInputMode="adjustResize">
+
+        </activity>
         <activity android:name=".activity.CommentActivity"/>
         <activity android:name=".activity.MentionActivity"/>
         <activity android:name=".activity.SearchActivity"/>
