1、私聊界面、发布微博界面：优化软键盘弹出时遮挡布局控件的问题

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,7 +59,7 @@
         <activity android:name=".activity.AccountActivity"/>
         <activity android:name=".activity.TopicActivity"/>
         <activity android:name=".activity.PostActivity"
-            android:windowSoftInputMode="stateVisible|adjustResize">
+            android:windowSoftInputMode="adjustResize">
 
         </activity>
         <activity android:name=".activity.LocalAlbumActivity"/>
