--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,6 +75,7 @@
         <activity android:name=".activity.CommentActivity"/>
         <activity android:name=".activity.MentionActivity"/>
         <activity android:name=".activity.SearchActivity"/>
+        <activity android:name=".activity.ThemeActivity"/>
 
     </application>
 
