--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,5 +62,6 @@ dependencies {
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.journeyapps:zxing-android-embedded:3.5.0'
+    compile 'org.greenrobot:eventbus:3.1.1'
     compile 'com.orhanobut:logger:1.15'
 }
