1、增加CoreService——暂时提供：网络状态变化监听、Toast统一调用 2、BaseApp：启动service；增加aty生命周期监听

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,6 +72,7 @@
         <activity android:name=".activity.SearchActivity" />
         <activity android:name=".activity.ThemeActivity" />
         <activity android:name=".ui.zxing.CaptureActivity"/>
+        <service android:name=".service.CoreService"/>
     </application>
 
 </manifest>
