搜索功能完善（用户搜索模块完成，微博搜索模块接口调不通）

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,6 +75,7 @@
         <activity android:name=".ui.zxing.CaptureActivity"/>
         <service android:name=".service.CoreService"/>
         <activity android:name=".activity.AboutActivity"/>
+        <activity android:name=".activity.UserListActivity"/>
     </application>
 
 </manifest>
