--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,5 +72,6 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.journeyapps:zxing-android-embedded:3.5.0'
     compile 'org.greenrobot:eventbus:3.1.1'
+    compile 'com.pnikosis:materialish-progress:1.7'
     compile 'com.orhanobut:logger:1.15'
 }
