--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,5 +73,6 @@ dependencies {
     compile 'com.journeyapps:zxing-android-embedded:3.5.0'
     compile 'org.greenrobot:eventbus:3.1.1'
     compile 'com.pnikosis:materialish-progress:1.7'
+    compile 'com.liulishuo.filedownloader:library:1.7.2'
     compile 'com.orhanobut:logger:1.15'
 }
