--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,9 +73,11 @@
         <activity android:name=".activity.SearchActivity" />
         <activity android:name=".activity.ThemeActivity" />
         <activity android:name=".ui.zxing.CaptureActivity"/>
-        <service android:name=".service.CoreService"/>
         <activity android:name=".activity.AboutActivity"/>
         <activity android:name=".activity.UserListActivity"/>
+
+        <service android:name=".service.CoreService"/>
+        <service android:name=".service.UpgradeDownloadService"/>
     </application>
 
 </manifest>
