--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,5 +74,6 @@ dependencies {
     compile 'org.greenrobot:eventbus:3.1.1'
     compile 'com.pnikosis:materialish-progress:1.7'
     compile 'com.liulishuo.filedownloader:library:1.7.2'
+    compile 'com.github.clans:fab:1.6.4'
     compile 'com.orhanobut:logger:1.15'
 }
