--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,15 +36,6 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    //skin
-
-    // skin-support basic widget
-
-    // skin-support-design material design support [selectable]
-
-    // skin-support-cardview CardView support [selectable]
-
-    // skin-support-constraint-layout ConstraintLayout support [selectable]
     compile files('libs/AMap_Location_V3.6.1_20171012.jar')
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
@@ -76,4 +67,5 @@ dependencies {
     compile 'com.liulishuo.filedownloader:library:1.7.2'
     compile 'com.github.clans:fab:1.6.4'
     compile 'com.orhanobut:logger:1.15'
+    compile 'com.amitshekhar.android:debug-db:1.0.0'
 }
