--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,5 @@ dependencies {
     compile 'com.github.clans:fab:1.6.4'
     compile 'com.orhanobut:logger:1.15'
     compile 'com.amitshekhar.android:debug-db:1.0.0'
+    compile 'com.alibaba:fastjson:1.1.68.android'
 }
