--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.LoginActivity" />
+        <activity android:name=".activity.SignupActivity"/>
         <activity android:name=".activity.SetupActivity" />
         <activity android:name=".activity.UserActivity" />
         <activity android:name=".activity.ImageDetailActivity"
@@ -77,6 +78,8 @@
         <activity android:name=".activity.ThemeActivity" />
         <activity android:name=".activity.AboutActivity"/>
         <activity android:name=".activity.UserListActivity"/>
+        <activity android:name=".activity.GroupsActivity"/>
+        <activity android:name=".activity.GroupsMemberActivity"/>
 
         <service android:name=".service.CoreService"/>
         <service android:name=".service.UpgradeDownloadService"/>
